Automatic Weighting of Armature Fails Unless Normals Recalculated #37685

Closed
opened 2013-12-03 01:06:38 +01:00 by Kyle Horseman · 9 comments

System Information
Mac OS X 10.9 (13A603), iMac, ATI Radeon HD 4670
Also encountered on what I assume are not identical systems, see Blender Artists link below.

Blender Version
Broken: Blender 2.69 r60991 confirmed. First noticed problem in 2.67 but was unable to find confirmation from other users until now.

Problem: Parenting an armature with automatic weights intermittently generates only empty vertex groups. Recalculating normals on the whole mesh immediately before parenting consistently fixes the problem, even in cases where normals were already correct and recalculating normals seems to have no real effect (other than allowing parenting to work properly, of course).

Exact steps for others to reproduce the error
GameCharacter3.blend
Without doing anything else first, select the character mesh, then a bone and parent with automatic weights. Pose the armature; the mesh does not follow. Vertex groups are created appropriately, but no vertices are assigned to any of them at any weight.

On the same file, recalculate normals on the entire mesh, then parent with automatic weights again. Weights are assigned as regularly expected. It is not clear to me what causes the problem, but this solution seems to work in all cases. The problem does not happen with every mesh, so I have been unable to get good confirmation until others noticed the issue with far simpler rigs and meshes, such as the attached. See also: http://blenderartists.org/forum/showthread.php?319559-%28Solved%29-Parenting-Mesh-to-Armature-Adds-Vertex-Groups-But-No-Weights&p=2527269#post2527269

**System Information** Mac OS X 10.9 (13A603), iMac, ATI Radeon HD 4670 Also encountered on what I assume are not identical systems, see Blender Artists link below. **Blender Version** Broken: Blender 2.69 r60991 confirmed. First noticed problem in 2.67 but was unable to find confirmation from other users until now. Problem: Parenting an armature with automatic weights intermittently generates only empty vertex groups. Recalculating normals on the whole mesh immediately before parenting consistently fixes the problem, even in cases where normals were already correct and recalculating normals seems to have no real effect (other than allowing parenting to work properly, of course). **Exact steps for others to reproduce the error** [GameCharacter3.blend](https://archive.blender.org/developer/F36129/GameCharacter3.blend) Without doing anything else first, select the character mesh, then a bone and parent with automatic weights. Pose the armature; the mesh does not follow. Vertex groups are created appropriately, but no vertices are assigned to any of them at any weight. On the same file, recalculate normals on the entire mesh, then parent with automatic weights again. Weights are assigned as regularly expected. It is not clear to me what causes the problem, but this solution seems to work in all cases. The problem does not happen with every mesh, so I have been unable to get good confirmation until others noticed the issue with far simpler rigs and meshes, such as the attached. See also: http://blenderartists.org/forum/showthread.php?319559-%28Solved%29-Parenting-Mesh-to-Armature-Adds-Vertex-Groups-But-No-Weights&p=2527269#post2527269
Author

Changed status to: 'Open'

Changed status to: 'Open'
Author

Added subscriber: @KHorseman

Added subscriber: @KHorseman
Brecht Van Lommel self-assigned this 2013-12-06 14:31:03 +01:00
Author

It's also been noted that you can't assign auto weights to a mesh that has no faces. I think this might be intended behavior, but it seems there might be an error checking step during the auto weights process related to this. I've done a few tests on the GameCharacter3.blend file. It seems that the recalculate normals workaround still works even if you first delete a large number of faces (leaving the connecting edges intact), but if there are zero faces, it will not work. If you delete a significant region of faces (for instance the whole torso, but leaving the head, arms and legs intact), auto weights will work for the regions with faces if you recalculate normals again, but no weights will be assigned where there are no faces.

Again, not sure if this is related, and the "no faces, no auto weights" behavior seems like it might be intended (though I'm not sure why), but if there is some kind of related error checking it seems like it could contribute to the original problem. There's a related BA thread here: http://blenderartists.org/forum/showthread.php?320083-rigging-wire-%28no-face%29-mesh&p=2530610#post2530610

It's also been noted that you can't assign auto weights to a mesh that has no faces. I think this might be intended behavior, but it seems there might be an error checking step during the auto weights process related to this. I've done a few tests on the GameCharacter3.blend file. It seems that the recalculate normals workaround still works even if you first delete a large number of faces (leaving the connecting edges intact), but if there are zero faces, it will not work. If you delete a significant region of faces (for instance the whole torso, but leaving the head, arms and legs intact), auto weights will work for the regions with faces if you recalculate normals again, but no weights will be assigned where there are no faces. Again, not sure if this is related, and the "no faces, no auto weights" behavior seems like it might be intended (though I'm not sure why), but if there is some kind of related error checking it seems like it could contribute to the original problem. There's a related BA thread here: http://blenderartists.org/forum/showthread.php?320083-rigging-wire-%28no-face%29-mesh&p=2530610#post2530610

This issue was referenced by blender/blender-addons-contrib@0847549009

This issue was referenced by blender/blender-addons-contrib@08475490097cf7445423ddc57b8de9eac5f5470c

This issue was referenced by 0847549009

This issue was referenced by 08475490097cf7445423ddc57b8de9eac5f5470c

Changed status from 'Open' to: 'Resolved'

Changed status from 'Open' to: 'Resolved'

Closed by commit 0847549009.

Closed by commit 0847549009.

Turns out this isn't related to the normals. The problem is that in weight paint mode face masking is enabled and no faces are selected, and this was influencing object mode too. It should just compute weights for the entire object in that case.

Recalculating the normals happens to require you to select all faces, so afterwards the weight calculation worked. Fixed now, thanks for the report.

Turns out this isn't related to the normals. The problem is that in weight paint mode face masking is enabled and no faces are selected, and this was influencing object mode too. It should just compute weights for the entire object in that case. Recalculating the normals happens to require you to select all faces, so afterwards the weight calculation worked. Fixed now, thanks for the report.
Author

Heh. You can always count on me to suggest a complete red herring solution. Thanks brecht!

Heh. You can always count on me to suggest a complete red herring solution. Thanks brecht!
Sign in to join this conversation.
No Label
Interest
Alembic
Interest
Animation & Rigging
Interest
Asset Browser
Interest
Asset Browser Project Overview
Interest
Audio
Interest
Automated Testing
Interest
Blender Asset Bundle
Interest
BlendFile
Interest
Collada
Interest
Compatibility
Interest
Compositing
Interest
Core
Interest
Cycles
Interest
Dependency Graph
Interest
Development Management
Interest
EEVEE
Interest
EEVEE & Viewport
Interest
Freestyle
Interest
Geometry Nodes
Interest
Grease Pencil
Interest
ID Management
Interest
Images & Movies
Interest
Import Export
Interest
Line Art
Interest
Masking
Interest
Metal
Interest
Modeling
Interest
Modifiers
Interest
Motion Tracking
Interest
Nodes & Physics
Interest
OpenGL
Interest
Overlay
Interest
Overrides
Interest
Performance
Interest
Physics
Interest
Pipeline, Assets & IO
Interest
Platforms, Builds & Tests
Interest
Python API
Interest
Render & Cycles
Interest
Render Pipeline
Interest
Sculpt, Paint & Texture
Interest
Text Editor
Interest
Translations
Interest
Triaging
Interest
Undo
Interest
USD
Interest
User Interface
Interest
UV Editing
Interest
VFX & Video
Interest
Video Sequencer
Interest
Virtual Reality
Interest
Vulkan
Interest
Wayland
Interest
Workbench
Interest: X11
Legacy
Blender 2.8 Project
Legacy
Milestone 1: Basic, Local Asset Browser
Legacy
OpenGL Error
Meta
Good First Issue
Meta
Papercut
Meta
Retrospective
Meta
Security
Module
Animation & Rigging
Module
Core
Module
Development Management
Module
EEVEE & Viewport
Module
Grease Pencil
Module
Modeling
Module
Nodes & Physics
Module
Pipeline, Assets & IO
Module
Platforms, Builds & Tests
Module
Python API
Module
Render & Cycles
Module
Sculpt, Paint & Texture
Module
Triaging
Module
User Interface
Module
VFX & Video
Platform
FreeBSD
Platform
Linux
Platform
macOS
Platform
Windows
Priority
High
Priority
Low
Priority
Normal
Priority
Unbreak Now!
Status
Archived
Status
Confirmed
Status
Duplicate
Status
Needs Info from Developers
Status
Needs Information from User
Status
Needs Triage
Status
Resolved
Type
Bug
Type
Design
Type
Known Issue
Type
Patch
Type
Report
Type
To Do
No Milestone
No project
No Assignees
3 Participants
Notifications
Due Date
The due date is invalid or out of range. Please use the format 'yyyy-mm-dd'.

No due date set.

Dependencies

No dependencies set.

Reference: blender/blender#37685
No description provided.